# Scope_Tutorials

./: .gitignore  1-Tutorial_1.ipynb  3-Tutorial_3.ipynb  4-Tutorial_4.ipynb  8-Tutorial_8.ipynb  README.md  pyproject.toml
.githooks/: post-merge
Data/1-Tutorial_1/Sources/ABITEM/: Cell_ABITEM.gmol
Data/5-Tutorial_5/: test_input.inp
Data/5-Tutorial_5/Sources/water/: water.xyz
Data/5-Tutorial_5/Systems/water/: water.npy
Data/7-Tutorial_7/: scope_env_tutos.npy  task1.scope  task2.scope  task3.scope
Data/7-Tutorial_7/1-Sources/benzene/: geom3.xyz
Data/7-Tutorial_7/1-Sources/formaldehyde/: geom2.xyz
Data/7-Tutorial_7/1-Sources/water/: geom4.xyz
Data/7-Tutorial_7/2-Systems/benzene/: benzene.npy
Data/7-Tutorial_7/2-Systems/water/: water.npy
Data/7-Tutorial_7/backup/: task2.scope
Data/9-Tutorial_9/: 1-opt_min.scope  2-opt_ts.scope  3-freq_min.scope  4-freq_ts.scope  5-td_min.scope
Data/Azo/1-Tutorial_1/: 1-opt_min.scope  2-opt_ts.scope  3-freq_min.scope
Data/Azo/2-Tutorial_2/: 4-freq_ts.scope
Data/Azo/Tutorial_2/: Tutorial_azo.npy
scripts/: export_tutorials.py
tutorials/: 1-Tutorial_1.ipynb  2-Tutorial_2.ipynb  3-Tutorial_3.ipynb  4-Tutorial_4.ipynb  5-Tutorial_5.ipynb  6-Tutorial_6.ipynb  7-Tutorial_7.ipynb  8-Tutorial_8.ipynb  9-Tutorial_9.ipynb  Azo_Tutorial_1.ipynb  Azo_Tutorial_2 old.ipynb  Azo_Tutorial_2.ipynb  Azo_Tutorial_2_Sergi_Tests.ipynb
tutorials/html/: 1-Tutorial_1.html  2-Tutorial_2.html  3-Tutorial_3.html  4-Tutorial_4.html  5-Tutorial_5.html  6-Tutorial_6.html  7-Tutorial_7.html  8-Tutorial_8.html  9-Tutorial_9.html
(+86 files in other folders)
