[project]
name = "scope_tutorials"
version = "0.0.0"
description = "Temporary test package"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.10"
dependencies = [
    "scope @ git+https://github.com/QTC-IQAC/Scope.git",
]

[tool.setuptools]
packages = ["tutorials"]
