[project]
name = "scope_tutorials"
version = "0.0.0"
description = "Temporary test package"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.10"
dependencies = [
    "scope @ git+https://github.com/QTC-IQAC/Scope.git",
    "scope-sco @ git+https://github.com/QTC-IQAC/Scope.git#subdirectory=sco",
    "scope-azo @ git+https://github.com/QTC-IQAC/Scope.git#subdirectory=azo",
]

[tool.setuptools]
packages = ["tutorials"]
