[project]
name = "scope_tutorials"
version = "0.9.0"
description = "Tutorials for SCOPE"
readme = "README.md"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "scope-qc",
    "scope-sco",
    "scope-azo",
]

[tool.setuptools]
packages = ["tutorials"]
